--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,7 +1,2 @@
-@import '~bootstrap/scss/bootstrap';
-@import '~select2/dist/css/select2';
-@import '~@ttskch/select2-bootstrap4-theme/dist/select2-bootstrap4';
-
-@import 'pages/status-store-owners';
-@import 'pages/home';
-@import 'base';
+// @import '~bootstrap/scss/bootstrap';
+// @import 'base';
