--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="h-100">
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,32 +10,7 @@
     <%= csp_meta_tag %>
   </head>
 
-  <body class="d-flex flex-column h-100">
-    <header>
-      <%= render 'shared/nav' %>
-    </header>
-    <main role="main" class="flex-shrink-0 nav-spacer">
-      <div class="container">
-        <% if Rails.env.development? %>
-          <%= switch_user_select %>
-        <% end %>
-        <% if flash[:notice] %>
-          <div class="alert alert-info"><%= flash[:notice] %></div>
-        <% end %>
-        <%= yield %>
-      </div>
-    </main>
-    <footer class="footer mt-auto py-3">
-      <div class="container">
-        <p class="small">
-          <span class="float-left">
-            <%= t('views.layout.application.title') %> &copy; <%= Time.current.year %>
-          </span>
-          <span class="float-right">
-            <%= t('views.layout.application.page_time') %> <%= Time.current.strftime('%H:%M') %>
-          </span>
-        </p>
-      </div>
-    </footer>
-  </body>
+  <body>
+  <%= yield %>
+</body>
 </html>
