--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -5,15 +5,17 @@
 
 // Colors
 
-$primary: #222222;
-$secondary: #f5cf00;
+$primary: #f5cf00;
+$blackish: #111111;
 
-$text-color-1: $primary;
-$text-color-2: $secondary;
+$text-color-1: #222222;
+$text-color-2: $primary;
+$text-color-3: #d8d8d8;
 
 $theme-colors: (
   'primary': $primary,
-  'secondary': $secondary,
+  'secondary': $white,
+  'black': $blackish,
 );
 
 // Body
@@ -21,12 +23,16 @@ $theme-colors: (
 $body-bg: white;
 $body-color: $text-color-1;
 
+$background-color-1: $blackish;
+
 // Typography
 $font-family-base: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial,
   sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 
 $font-size-base: rem(20);
 $font-size-s: rem(18);
+
+$line-height-base: 1.33;
 
 // Grid containers
 
@@ -40,10 +46,11 @@ $container-max-widths: (
 
 $btn-font-family: $font-family-base;
 $btn-font-size: $font-size-base;
-$btn-font-weight: $font-weight-bold;
 
-// $btn-padding-y: rem(17);
-// $btn-padding-x: rem(17);
+$btn-padding-y: rem(9);
+$btn-padding-x: rem(10);
+
+$btn-block-spacing-y: map-get($spacers, 3);
 
 // $btn-border-radius: 0;
 // $btn-border-radius-sm: $btn-border-radius;
@@ -77,7 +84,3 @@ $btn-font-weight: $font-weight-bold;
 // $custom-select-border-color: $primary;
 // $custom-select-focus-border-color: $custom-select-border-color;
 // $custom-select-focus-box-shadow: $box-shadow-3;
-
-// Options
-
-$enable-responsive-font-sizes: true;
