--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,9 +1,6 @@
 @import 'settings';
 
 // Import Bootstrap's modules individually below
-@import 'bootstrap/scss/functions';
-@import 'bootstrap/scss/variables';
-@import 'bootstrap/scss/mixins';
 @import 'bootstrap/scss/root';
 @import 'bootstrap/scss/reboot';
 @import 'bootstrap/scss/type';
@@ -15,4 +12,5 @@
 @import 'bootstrap/scss/navbar';
 @import 'bootstrap/scss/utilities';
 
+@import 'functions';
 @import 'base';
