--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,8 +9,8 @@
           <%= t('views.home.index.intro') %>
         </p>
 
-        <%= link_to t('views.home.index.log_in'), new_user_session_path, class: 'mt-4 btn btn-block btn-secondary' %>
-        <%= link_to t('views.home.index.register'), new_user_registration_path, class: 'btn btn-block btn-primary' %>
+        <%= link_to t('views.shared.log_in'), new_user_session_path, class: 'mt-4 btn btn-block btn-secondary' %>
+        <%= link_to t('views.shared.register'), new_user_registration_path, class: 'btn btn-block btn-primary' %>
       </div>
     </div>
     <div class="flex-shrink-0 flex-grow-1 d-flex justify-content-center align-items-center" style="background: no-repeat url(<%= asset_path 'homepage-map-background.jpg' %>); background-size: cover;">
