--- a/app/assets/stylesheets/components/_notification.scss
+++ b/app/assets/stylesheets/components/_notification.scss
@@ -3,4 +3,8 @@
 .c-notification {
   color: $white;
   background: $background-color-2;
+
+  & + .c-notification {
+    border-top: rem(1) solid $background-color-1;
+  }
 }
