--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,18 @@
-<h2><%= t('.resend_confirmation_instructions') %></h2>
-
-<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit t('.resend_confirmation_instructions') %>
-  </div>
+<% content_for :title do %>
+<%= t('views.devise.confirmations.confirmation_instructions') %>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<p>
+  <%= t('views.devise.confirmations.intro') %>
+</p>
+
+<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+<div class="form-group">
+  <%= f.label :email %>
+  <%= f.email_field :email, required: true, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: 'form-control' %>
+</div>
+
+<div class="form-group mt-5">
+  <%= f.submit t('views.devise.confirmations.send_confirmation_instructions'), class: 'btn btn-block btn-secondary' %>
+</div>
+<% end %>
