--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,22 +1,18 @@
-<div class="row mt-3">
-  <div class="col-md-12">
-    <h3><%= t('.forgot_your_password') %></h3>
-  </div>
+<% content_for :title do %>
+<%= t('views.devise.passwords.password_instructions') %>
+<% end %>
 
-  <div class="col-md-12">
-    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-      <%= render "devise/shared/error_messages", resource: resource %>
+<p>
+  <%= t('views.devise.passwords.intro') %>
+</p>
 
-      <div class="form-group">
-        <%= f.label :email, class: 'col-sm-4 col-form-label' %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
-      </div>
-
-      <div class="form-group">
-        <%= f.submit t('.send_me_reset_password_instructions'), class: 'btn btn-primary' %>
-      </div>
-    <% end %>
-
-    <%= render "devise/shared/links" %>
-  </div>
+<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+<div class="form-group">
+  <%= f.label :email %>
+  <%= f.email_field :email, required: true, autofocus: true, autocomplete: "email", class: 'form-control' %>
 </div>
+
+<div class="form-group mt-5">
+  <%= f.submit t('views.devise.passwords.send_password_instructions'), class: 'btn btn-block btn-secondary' %>
+</div>
+<% end %>
