--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,22 +1,41 @@
 <div class="vh-100">
   <div class="h-100 d-flex flex-column">
-    <div class="background-black py-4 flex-shrink-0">
-      <div class="container">
-        <h1 class="mt-0 mb-4 font-base text-center">
-          <%= t('views.home.index.title') %>
-        </h1>
-        <p class="font-s">
-          <%= t('views.home.index.intro') %>
-        </p>
+    <div class="h-100 flex-shrink-1 flex-grow-1 overflow-auto d-flex flex-column">
+      <div class="background-black py-4 flex-shrink-0">
+        <div class="container">
+          <h1 class="mt-0 mb-4 font-base text-center">
+            <%= t('views.home.index.title') %>
+          </h1>
+          <p class="font-s">
+            <%= t('views.home.index.intro') %>
+          </p>
 
-        <%= link_to t('views.shared.log_in'), new_user_session_path, class: 'mt-4 btn btn-block btn-secondary' %>
-        <%= link_to t('views.shared.register'), new_user_registration_path, class: 'btn btn-block btn-primary' %>
+          <%= link_to t('views.shared.log_in'), new_user_session_path, class: 'mt-4 btn btn-block btn-secondary' %>
+          <%= link_to t('views.shared.register'), new_user_registration_path, class: 'btn btn-block btn-primary' %>
+        </div>
+      </div>
+      <div class="flex-shrink-0 flex-grow-1 d-flex justify-content-center align-items-center" style="background: no-repeat url(<%= asset_path 'homepage-map-background.jpg' %>); background-size: cover;">
+        <div class="container">
+          <%= link_to t('views.home.index.explore'), map_index_path, class: 'my-5 btn btn-block btn-black' %>
+        </div>
       </div>
     </div>
-    <div class="flex-shrink-0 flex-grow-1 d-flex justify-content-center align-items-center" style="background: no-repeat url(<%= asset_path 'homepage-map-background.jpg' %>); background-size: cover;">
+    <% flash.reject { |key| key == :timedout }.each do |type, value| %>
+    <% if !value.kind_of?(Array) %>
+    <div class="flex-shrink-0 py-3 text-center c-notification">
       <div class="container">
-        <%= link_to t('views.home.index.explore'), map_index_path, class: 'my-5 btn btn-block btn-black' %>
+        <%= value %>
       </div>
     </div>
+    <% else %>
+    <% value.each do |msg| %>
+    <div class="flex-shrink-0 py-3 text-center c-notification">
+      <div class="container">
+        <%= msg %>
+      </div>
+    </div>
+    <% end %>
+    <% end %>
+    <% end %>
   </div>
 </div>
