--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -8,7 +8,7 @@
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
 <div class="form-group">
-  <%= f.label :email %>
+  <%= f.label :email, class: 'required' %>
   <%= f.email_field :email, required: true, autofocus: true, autocomplete: "email", class: 'form-control' %>
 </div>
 
