--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,22 +4,22 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 <div class="form-group">
-  <%= f.label :name %>
+  <%= f.label :name, class: 'required' %>
   <%= f.text_field :name, required: true, autofocus: true, autocomplete: "name", class: 'form-control' %>
 </div>
 
 <div class="form-group">
-  <%= f.label :email %>
+  <%= f.label :email, class: 'required' %>
   <%= f.email_field :email, required: true, autocomplete: "email", class: 'form-control' %>
 </div>
 
 <div class="form-group">
-  <%= f.label :password %>
+  <%= f.label :password, class: 'required' %>
   <%= f.password_field :password, required:true, autocomplete: "new-password", class: 'form-control' %>
 </div>
 
 <div class="form-group">
-  <%= f.label :password_confirmation %>
+  <%= f.label :password_confirmation, class: 'required' %>
   <%= f.password_field :password_confirmation, required: true, autocomplete: "new-password", class: 'form-control' %>
 </div>
 
