Visually implement the drawer

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -20,6 +20,10 @@ label {
   }
 }
 
+a:not(.btn-primary):not(.btn-secondary):not(.btn-black) {
+  color: $body-color;
+}
+
 .font-base {
   @include font-size($font-size-base);
 }
