--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -64,3 +64,28 @@ a:not(.btn-primary):not(.btn-secondary):not(.btn-black) {
   color: $body-color;
   background: $body-bg;
 }
+
+// The following styles are necessary for the dialog library
+@keyframes dialog-fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.dialog-container > :first-child {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba($black, 0.3);
+  z-index: -1;
+  animation: dialog-fade-in 200ms 1 both;
+}
+
+.dialog-container[aria-hidden='true'] {
+  display: none;
+}
