--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -8,6 +8,7 @@
 $primary: #f5cf00;
 $blackish: #111111;
 $grey-1: #888888;
+$danger: #ff331b;
 
 $text-color-1: #222222;
 $text-color-2: $primary;
@@ -18,6 +19,7 @@ $theme-colors: (
   'primary': $primary,
   'secondary': $white,
   'black': $blackish,
+  'danger': $danger,
 );
 
 // Body
