--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,49 @@
-<h2><%= t('.title', resource: resource.model_name.human) %></h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="form-group">
-    <%= f.label :email, class: 'col-sm-4 col-form-label'  %>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
-  </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div><%= t('.currently_waiting_confirmation_for_email', email: resource.unconfirmed_email) %></div>
-  <% end %>
-
-  <div class="form-group">
-    <%= f.label :password, class: 'col-sm-4 col-form-label'  %> <i>(<%= t('.leave_blank_if_you_don_t_want_to_change_it') %>)</i>
-    <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></em>
-    <% end %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :password_confirmation, class: 'col-sm-4 col-form-label'  %>
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :current_password, class: 'col-sm-4 col-form-label'  %> <i>(<%= t('.we_need_your_current_password_to_confirm_your_changes') %>)</i>
-    <%= f.password_field :current_password, autocomplete: "current-password", class: 'form-control' %>
-  </div>
-
-  <div class="form-group">
-    <%= f.submit t('.update'), class: 'btn btn-primary' %>
-  </div>
+<% content_for :title do %>
+<%= t('views.shared.edit_profile') %>
 <% end %>
 
-<h3><%= t('.cancel_my_account') %></h3>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<div class="form-group">
+  <%= f.label :name, class: 'required' %>
+  <%= f.text_field :name, required: true, autofocus: true, autocomplete: "name", class: 'form-control' %>
+</div>
 
-<p><%= t('.unhappy') %> <%= button_to t('.cancel_my_account'), registration_path(resource_name), data: { confirm: t('.are_you_sure') }, method: :delete, class: 'btn btn-warning' %></p>
+<div class="form-group">
+  <%= f.label :email, class: 'required'  %>
+  <%= f.email_field :email, required: true, autofocus: true, autocomplete: "email", class: 'form-control' %>
+</div>
 
-<%= link_to t('devise.shared.links.back'), :back %>
+<div class="form-group">
+  <%= f.label :current_password, class: 'required'  %>
+  <%= f.password_field :current_password, required: true, autocomplete: "current-password", class: 'form-control' %>
+</div>
+
+<div class="form-group">
+  <%= f.label :organization %>
+  <%= f.text_field :organization, autocomplete: "organization", class: 'form-control' %>
+</div>
+
+<div class="form-group">
+  <%= f.label :position %>
+  <%= f.text_field :position, class: 'form-control' %>
+</div>
+
+<div class="form-group">
+  <%= f.label :password, t('views.devise.registrations.new_password')  %>
+  <%= f.password_field :password, autocomplete: "new-password", class: 'form-control', 'aria-describedby': 'password-note' %>
+  <small id="password-note" class="form-text"><%= t('views.devise.registrations.can_leave_blank') %></small>
+</div>
+
+<div class="form-group">
+  <%= f.label :password_confirmation, t('views.devise.registrations.new_password_confirmation')  %>
+  <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
+</div>
+
+<div class="form-group mt-5">
+  <%= f.submit t('views.devise.registrations.update'), class: 'btn btn-block btn-secondary' %>
+</div>
+
+<div class="form-group mt-5">
+  <%= link_to t('views.devise.registrations.close_account'), close_user_registration_path, class: 'btn btn-block btn-danger' %>
+</div>
+<% end %>
