--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -15,7 +15,7 @@
       </div>
       <div class="container">
         <% if user_signed_in? %>
-        <%= link_to t("views.map.edit_profile"), edit_user_registration_path, class: 'd-block mb-4' %>
+        <%= link_to t("views.shared.edit_profile"), edit_user_registration_path, class: 'd-block mb-4' %>
         <%= link_to t("views.shared.log_out"), destroy_user_session_path, class: 'd-block' %>
         <% end %>
       </div>
