--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,7 @@
 @import 'bootstrap/scss/grid';
 @import 'bootstrap/scss/tables';
 @import 'bootstrap/scss/forms';
+@import 'bootstrap/scss/custom-forms';
 @import 'bootstrap/scss/buttons';
 @import 'bootstrap/scss/nav';
 @import 'bootstrap/scss/navbar';
