Let the user geolocate themselves

--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -9,6 +9,7 @@ $primary: #f5cf00;
 $blackish: #111111;
 $grey-1: #888888;
 $danger: #ff331b;
+$blue-1: #0030ff;
 
 $text-color-1: #222222;
 $text-color-2: $primary;
