--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -47,7 +47,7 @@
               </g>
             </svg>
             Add pin</button>
-          <button type="button" class="btn btn-secondary locate-button">
+          <button type="button" class="btn btn-secondary locate-button js-map-geolocation">
             <svg width="26" height="26" xmlns="http://www.w3.org/2000/svg" aria-label="<%= t('views.map.locate_me') %>">
               <g fill-rule="nonzero" transform="translate(-303 -99)">
                 <path d="M316 119.607a7.561 7.561 0 0 0 7.608-7.607 7.562 7.562 0 0 0-7.607-7.607 7.562 7.562 0 0 0-7.607 7.607 7.562 7.562 0 0 0 7.607 7.607zm9.753-8.68h1.174a1.072 1.072 0 1 1 0 2.145h-1.174c-.51 4.545-4.136 8.17-8.68 8.681v1.174a1.072 1.072 0 1 1-2.145 0v-1.174c-4.545-.51-8.17-4.136-8.681-8.68h-1.174a1.072 1.072 0 1 1 0-2.145h1.174c.51-4.545 4.136-8.17 8.68-8.681v-1.174a1.072 1.072 0 1 1 2.145 0v1.174c4.545.51 8.17 4.136 8.681 8.68z" stroke="#FFF" stroke-width=".3" />
