Add a login wall on the map

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
       <div class="background-black py-4 flex-shrink-0">
         <div class="container">
           <h1 class="mt-0 mb-4 font-base text-center">
-            <%= t('views.home.index.title') %>
+            <%= t('views.layout.application.title') %>
           </h1>
           <p class="font-s">
             <%= t('views.home.index.intro') %>
