--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -101,6 +101,16 @@ $custom-select-focus-border-color: $input-focus-border-color;
 $custom-select-box-shadow: none;
 $custom-select-focus-box-shadow: $input-focus-box-shadow;
 
+$custom-control-indicator-border-color: $input-border-color;
+$custom-control-indicator-checked-border-color: $input-border-color;
+$custom-control-indicator-active-border-color: $input-border-color;
+$custom-control-indicator-bg: transparent;
+$custom-control-indicator-active-bg: transparent;
+$custom-control-indicator-checked-bg: transparent;
+$custom-control-indicator-checked-color: $body-color;
+$custom-checkbox-indicator-icon-checked: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'><path fill='#{$custom-control-indicator-checked-color}' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/></svg>");
+$custom-control-indicator-focus-box-shadow: $input-focus-box-shadow;
+
 // Controls
 
 // $custom-control-gutter: map-get($spacers, 3);
