Fix login wall's close button's margin

--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -43,7 +43,7 @@
       <div class="container">
         <div class="position-relative">
           <button type="button" class="position-absolute mt-2 btn btn-black" data-a11y-dialog-hide style="top: 0; right: 0;">
-            <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" aria-label="<%= t("views.shared.close_dialog") %>">
+            <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" class="d-block" aria-label="<%= t("views.shared.close_dialog") %>">
               <path d="M21.677 0l2.19 2.121-9.532 9.517.375.362-.375.362 9.532 9.517L21.677 24 12 14.625 2.323 24l-2.19-2.121 9.531-9.517L9.29 12l.374-.362-9.53-9.517L2.322 0 12 9.375 21.677 0z" fill="#FFF" fill-rule="evenodd" />
             </svg>
           </button>
