--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -100,16 +100,28 @@ $custom-select-border-color: $input-border-color;
 $custom-select-focus-border-color: $input-focus-border-color;
 $custom-select-box-shadow: none;
 $custom-select-focus-box-shadow: $input-focus-box-shadow;
+$custom-select-bg-size: 12px 15px;
+$custom-select-indicator-color: $border-color-1;
+$custom-select-indicator: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'><path fill='#{$custom-select-indicator-color}' d='M2 0L0 2h4zm0 5L0 3h4z'/></svg>");
+$custom-select-background: escape-svg($custom-select-indicator) no-repeat right
+  $custom-select-padding-x center / $custom-select-bg-size;
 
+$custom-control-gutter: map-get($spacers, 3);
+$custom-control-indicator-size: rem(30);
 $custom-control-indicator-border-color: $input-border-color;
 $custom-control-indicator-checked-border-color: $input-border-color;
 $custom-control-indicator-active-border-color: $input-border-color;
+$custom-control-indicator-focus-border-color: $input-border-color;
 $custom-control-indicator-bg: transparent;
 $custom-control-indicator-active-bg: transparent;
 $custom-control-indicator-checked-bg: transparent;
 $custom-control-indicator-checked-color: $body-color;
 $custom-checkbox-indicator-icon-checked: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'><path fill='#{$custom-control-indicator-checked-color}' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/></svg>");
 $custom-control-indicator-focus-box-shadow: $input-focus-box-shadow;
+
+$custom-switch-width: rem(50);
+$custom-switch-indicator-border-radius: rem(15);
+$custom-switch-indicator-size: rem(26);
 
 // Controls
 
