Implement the 1st step of pin creation
This is the screen to select the type of pin.

--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -28,6 +28,8 @@ $theme-colors: (
 $body-bg: white;
 $body-color: $text-color-1;
 
+$text-muted: $text-color-4;
+
 $background-color-1: $blackish;
 $background-color-2: #323232;
 
