--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -77,16 +77,16 @@
               <path d="M22 16.111v2.222H2v-2.222h20zm0-5.555v2.222H2v-2.222h20zM22 5v2.222H2V5h20z" fill-rule="evenodd" /></svg>
           </button>
           <% if user_signed_in? %>
-          <button type="button" class="flex-grow-1 mx-3 btn btn-primary text-center pin-button">
-            <svg class="d-inline-block mr-1" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
-              <g transform="translate(2 2)" fill-rule="nonzero" fill="none">
-                <path d="M9.684 16.387a.499.499 0 0 0 .632 0C10.55 16.197 16 11.672 16 6A6 6 0 1 0 4 6c0 5.672 5.451 10.197 5.684 10.387zM7 6a3 3 0 1 1 6 0 3 3 0 0 1-6 0z" fill="#222" />
-                <circle cx="10" cy="6" r="2" />
-                <path d="M13.764 14.204a20.258 20.258 0 0 1-2.816 2.958 1.499 1.499 0 0 1-1.898-.002 20.226 20.226 0 0 1-2.814-2.956C3.014 14.566 0 15.446 0 17c0 1.97 5.03 3 10 3s10-1.03 10-3c0-1.554-3.014-2.434-6.236-2.796z" fill="#FFF" />
-              </g>
-            </svg>
-            <%= t("views.map.add_pin") %>
-          </button>
+          <%= link_to new_pin_path, class: 'flex-grow-1 mx-3 btn btn-primary text-center pin-button' do %>
+          <svg class="d-inline-block mr-1" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+            <g transform="translate(2 2)" fill-rule="nonzero" fill="none">
+              <path d="M9.684 16.387a.499.499 0 0 0 .632 0C10.55 16.197 16 11.672 16 6A6 6 0 1 0 4 6c0 5.672 5.451 10.197 5.684 10.387zM7 6a3 3 0 1 1 6 0 3 3 0 0 1-6 0z" fill="#222" />
+              <circle cx="10" cy="6" r="2" />
+              <path d="M13.764 14.204a20.258 20.258 0 0 1-2.816 2.958 1.499 1.499 0 0 1-1.898-.002 20.226 20.226 0 0 1-2.814-2.956C3.014 14.566 0 15.446 0 17c0 1.97 5.03 3 10 3s10-1.03 10-3c0-1.554-3.014-2.434-6.236-2.796z" fill="#FFF" />
+            </g>
+          </svg>
+          <%= t("views.shared.add_pin") %>
+          <% end %>
           <% else %>
           <button type="button" class="flex-grow-1 mx-3 btn btn-primary text-center pin-button" data-a11y-dialog-show="login-wall">
             <svg class="d-inline-block mr-1" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
@@ -96,7 +96,7 @@
                 <path d="M13.764 14.204a20.258 20.258 0 0 1-2.816 2.958 1.499 1.499 0 0 1-1.898-.002 20.226 20.226 0 0 1-2.814-2.956C3.014 14.566 0 15.446 0 17c0 1.97 5.03 3 10 3s10-1.03 10-3c0-1.554-3.014-2.434-6.236-2.796z" fill="#FFF" />
               </g>
             </svg>
-            <%= t("views.map.add_pin") %>
+            <%= t("views.shared.add_pin") %>
           </button>
           <% end %>
           <button type="button" class="btn btn-secondary locate-button js-map-geolocation">
